# blinds_controller

./: .gitmodules  Cargo.toml  Commander.cpp  Commander.h  IOController.ino  Registers.h  SerialIO.cpp  SerialIO.h  blinds_controller.ino
.cargo/: config.toml
.run/: Check Manta E3EZ.run.xml  Check Octopus.run.xml  Check SKR Pico.run.xml  Run Manta E3EZ.run.xml  Run SKR Pico.run.xml
board/: Cargo.toml
board/.cargo/: config.toml  run-harness.sh
board/board/: Cargo.toml  remote-run.sh
board/board/.cargo/: config.toml
board/board/src/: board.rs
board/btt_manta_e3ez/: Cargo.toml
board/btt_manta_e3ez/.cargo/: config.toml
board/btt_manta_e3ez/src/: board.rs  main.rs
board/btt_octopus/: Cargo.toml
board/btt_octopus/.cargo/: config.toml
board/btt_skr_pico_v1.0/: Cargo.toml
board/btt_skr_pico_v1.0/src/: board.rs  main.rs
board/btt_skr_pico_v1_0/: Cargo.toml  remote-run.sh
board/btt_skr_pico_v1_0/.cargo/: config.toml
board/btt_skr_pico_v1_0/src/: board.rs  main.rs
board/src/: board.rs
core/: .gitignore
core/blinds_controller/: Cargo.toml
core/blinds_controller/src/board/: mod.rs  tmc2209_uart.rs
core/blinds_controller/src/board/rp/: mod.rs
core/blinds_controller/src/rpc/: serial.rs  usb_cdc_acm.rs
core/controller/: Cargo.toml
core/controller/src/: lib.rs
core/controller/src/board/: mod.rs  tmc2209_uart.rs
core/controller/src/board/rp/: mod.rs
core/controller/src/board/rp/utils/: counted_sqr_wav.pio  counted_sqr_wav_pio.rs  mod.rs
core/controller/src/board/stm32/: bitbanged_uart.rs  mod.rs
core/controller/src/rpc/: mod.rs  serial.rs  usb_cdc_acm.rs
core/sequencer/: Cargo.toml
core/sequencer/src/imp/modulator/: mod.rs
core/sequencer/src/imp/modulator/ramping/: mod.rs  tests.rs
core/sequencer/src/imp/sequencer/: mod.rs  tests.rs
core/sequencer/src/imp/sequencer/halting/: mod.rs
core/sequencer/src/imp/sequencer/halting/tests/: mod.rs  roller.rs  roller_grouped.rs  roller_ramming.rs  tilt.rs  venetian.rs
core/sequencer/src/imp/sequencer/tests/: venetian.rs
core/sequencer/src/model/: modulator.rs  sequencer.rs
core/thermistor/: Cargo.toml
core/thermistor/src/: lib.rs  tests.rs
src/: build.rs  checks.rs  config.rs  driver.rs  main.rs
src/board/: btt_skr_pico_v1_0.rs  mod.rs  tmc2209.rs  tmc2209_uart.rs
src/board/raspberry/: btt_skr_pico_v1_0.rs  counted_sqr_wav_pio.rs  mod.rs
src/board/rp/: btt_skr_pico_v1_0.rs  mod.rs
src/board/rp_act/: counted_sqr_wav.rs  counted_sqr_wav_pio.rs  mod.rs
src/board/rp_pio/: counted_sqr_wav.rs  counter_2ch.rs  counting_toggle.rs  mod.rs
src/board/stm32/: btt_manta_e3ez.rs  btt_octopus.rs  mod.rs
src/comms/: instruction_buffer.rs  look_ahead.rs  mod.rs  rpc.rs  serial_rpc.rs  usb_cdc_acm.rs
src/rpc/: mod.rs  serial.rs  usb_cdc_acm.rs
