[package]
name = "blinds_controller"
version = "0.1.0"
edition = "2021"

[features]
default = ["btt_skr_pico_v1_0"]

# MCU vendor configuration block
raspberry = ["dep:cortex-m-rt", "dep:embassy-rp",
    "dep:pio-proc", "dep:pio", # No ACT timer like the STM chips, implemented in PIO
    "uart_soft_half_duplex" # No hardware readback prevention on UART
]
stm32 = ["dep:cortex-m-rt", "dep:embassy-stm32"]

# MCU configuration block
rp2040 = ["raspberry", "embassy-rp/rp2040",
    "dep:critical-section", "portable-atomic/critical-section" # No atomic instructions
]
stm32g0b1re = ["stm32", "embassy-stm32/stm32g0b1re",
    "dep:critical-section", "portable-atomic/critical-section", # No atomic instructions
    "cortex-m/critical-section-single-core", # Not all STM chips are single-cored so making the selection here
    "embassy-stm32/time-driver-tim2" # This particular STM chip has the ACTs on 1, 15, 16, and 17. Avoiding those.
]

# Board configuration block
btt_skr_pico_v1_0 = ["rp2040", "tmc2209"]
btt_manta_e3ez = ["stm32g0b1re", "tmc2209"]


# Driver configuration block
tmc2209 = ["dep:tmc2209", "configurable_driver", "stallguard"]
configurable_driver = ["dep:embedded-io"]
uart_soft_half_duplex = []
stallguard = []

[dependencies]
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

fixed = "1"
embassy-executor = { version = "0.7", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.3", optional = true, features = ["defmt", "rt", "time-driver", "critical-section-impl"] }
embassy-stm32 = { version = "0.2", optional = true, features = ["defmt", "rt"] }
pio-proc = { version = "0.2", optional = true }
pio = { version = "0.2", optional = true }

embedded-io = { version = "0.6", optional = true, features = ["defmt-03"] }
blinds_sequencer = { git = "https://github.com/thinkier/blinds_sequencer" }
tmc2209 = { git = "https://github.com/mitchmindtree/tmc2209", optional = true }

static_cell = "2"
portable-atomic = { version = "1.10" }
critical-section = { version = "1", optional = true }

serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6", features = ["defmt"] }

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[profile.dev]
lto = true
