[package]
name = "board"
version = "0.1.0"
edition = "2021"

[features]
default = ["host-uart"]
host-uart = ["controller/host-uart"]
host-usb = ["controller/host-usb", "dep:embassy-usb"]

[dependencies]
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

static_cell = "2"

cortex-m-rt = "0.7"
embassy-executor = "0.10.0"
embassy-rp = { version = "0.10.0", features = ["rp2040"] }
embassy-usb = { version = "0.6.0", optional = true }
embassy-time = "0.5.1"

# Readout for thermistor
defmt = "1.1.0"
thermistor = { path = "../core/thermistor" }

[dependencies.controller]
path = "../core/controller"
features = ["rp", "thumbv6m", # No atomics on RP2040
    "driver-qty-4",
    "brownout-protection",
    "tmc2209_async", "uart_driver_shared_bus", "stallguard"
]

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[profile.dev]
lto = true
