[package]
name = "blinds_controller"
version = "0.1.0"
edition = "2021"
authors = ["thinkier"]

[features]
default = []

# Architecture configuration block
thumbv6m = ["dep:critical-section", "portable-atomic/critical-section"]

# MCU vendor configuration block
rp = [
    "dep:embassy-rp",
    "dep:pio-proc", "dep:pio", "dep:fixed", # No ACT timer like the STM chips, implemented in PIO
    "uart_soft_half_duplex" # No hardware readback prevention on UART
]
stm32 = [
    "dep:embassy-stm32",
    "embassy-stm32/time-driver-tim2" # Choosing TIM2 as this shouldn't occupy any ACT-capable timers
]
_stm32g0b1re = ["dep:embassy-stm32", "embassy-stm32/stm32g0b1re"]

# Communications block
host-usb = ["dep:embassy-usb"]
host-uart = ["dep:embedded-io"]

# Driver quantity selector
driver-qty-4 = []
driver-qty-5 = ["driver-qty-ge-5"]
driver-qty-8 = ["driver-qty-ge-8"]
driver-qty-10 = ["driver-qty-ge-10"]
# Comparators to make it easier to use the flags in code
driver-qty-ge-5 = []
driver-qty-ge-8 = ["driver-qty-ge-5"]
driver-qty-ge-10 = ["driver-qty-ge-8"]

# Driver configuration block
tmc2209_uart = ["dep:tmc2209", "uart_configurable_driver", "stallguard"]
uart_configurable_driver = ["dep:embedded-io"]
stallguard = []
uart_soft_half_duplex = [] # Subtle peripheral issues
uart_driver_shared_bus = [] # Subtle differences in board design

[dependencies]
# Debug deps
defmt = "0.3"

# Runtime deps
cortex-m = "0.7"
embassy-executor = { version = "0.7", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }

# Raspberry Silicon-specific deps
embassy-rp = { version = "0.3", optional = true, features = ["defmt", "rt", "time-driver", "critical-section-impl"] }
pio-proc = { version = "0.2", optional = true }
pio = { version = "0.2", optional = true }
fixed = { version = "1", optional = true }

# STMicroelectronics-specific deps
embassy-stm32 = { version = "0.2", optional = true, features = ["defmt", "rt", "time", "exti"] }

# TMC2209 driver-specific deps
tmc2209 = { git = "https://github.com/mitchmindtree/tmc2209", optional = true }

# State management deps
blinds_sequencer = { git = "https://github.com/thinkier/blinds_sequencer" }

# RPC deps
embassy-usb = { version = "0.4", optional = true }
embedded-io = { version = "0.6", optional = true, features = ["defmt-03"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6", features = ["defmt"] }

# Memory management deps
static_cell = "2"
critical-section = { version = "1", optional = true }
portable-atomic = { version = "1.10" }

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[profile.dev]
lto = true
