[package]
name = "controller"
version = "0.1.0"
edition = "2021"
authors = ["thinkier"]

[features]
default = ["driver-qty-4"]

# Architecture configuration block
thumbv6m = ["dep:critical-section", "portable-atomic/critical-section"]

# MCU vendor configuration block
rp = [
    "dep:embassy-rp",
    "dep:pio-proc", "dep:pio", "dep:fixed", # No ACT timer like the STM chips, implemented in PIO
    "uart_soft_half_duplex" # No hardware readback prevention on UART
]
stm32 = [
    "dep:embassy-stm32",
    "embassy-stm32/time-driver-tim2" # Choosing TIM2 as this shouldn't occupy any ACT-capable timers
]
_stm32g0b1re = ["dep:embassy-stm32", "embassy-stm32/stm32g0b1re"]

# Communications block
host-usb = ["dep:embassy-usb"]
host-uart = ["dep:embedded-io-async"]

# Driver quantity selector
driver-qty-4 = []
driver-qty-5 = []
driver-qty-8 = []
driver-qty-10 = []

# Driver configuration block
tmc2209_uart = ["dep:tmc2209-async", "uart_configurable_driver", "stallguard"]
uart_configurable_driver = ["dep:embedded-io-async"]
stallguard = []
uart_soft_half_duplex = [] # Subtle peripheral issues
uart_driver_shared_bus = [] # Subtle differences in board design

# For when your power supply is shit
brownout-protection = []
thermistor = ["dep:thermistor"]

[dependencies]
# Debug deps
defmt = "1.1.0"

# Runtime deps
cortex-m = "0.7"
embassy-executor = { version = "0.10.0", features = ["defmt", "platform-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }

# Raspberry Silicon-specific deps
embassy-rp = { version = "0.10.0", optional = true, features = ["defmt", "rt", "time-driver", "critical-section-impl"] }
pio-proc = { version = "0.3.0", optional = true }
pio = { version = "0.3.0", optional = true }
fixed = { version = "1", optional = true }

# STMicroelectronics-specific deps
embassy-stm32 = { version = "0.6.0", optional = true, features = ["defmt", "rt", "time", "exti"] }

# TMC2209 driver-specific deps
tmc2209-async = { git = "https://github.com/thinkier/tmc2209-rs", optional = true }

# State management deps
sequencer = { path = "../sequencer" }

# Fun stuff
thermistor = { path = "../thermistor", optional = true }

# RPC deps
embassy-usb = { version = "0.6.0", optional = true }
embedded-io-async = { version = "0.7", optional = true, features = ["defmt"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6", features = ["defmt"] }

# Memory management deps
static_cell = "2"
critical-section = { version = "1", optional = true }
portable-atomic = { version = "1.10" }
heapless = "0.9.1"
