[package]
name = "controller"
version = "0.1.0"
edition = "2021"
authors = ["thinkier"]

[features]
default = ["rp", "driver-qty-4", "host-uart"]

# Architecture configuration block
thumbv6m = ["dep:critical-section", "portable-atomic/critical-section"]

# MCU vendor configuration block
rp = [
    "dep:embassy-rp",
    "dep:pio-proc", "dep:pio", "dep:fixed", # No ACT timer like the STM chips, implemented in PIO
    "uart_soft_half_duplex" # No hardware readback prevention on UART
]

# Communications block
host-usb = ["dep:embassy-usb", "dep:circ_buffer"]
host-uart = ["dep:embedded-io-async"]

# Driver quantity selector
driver-qty-4 = []
driver-qty-5 = []
driver-qty-8 = []
driver-qty-10 = []

# Driver configuration block
tmc2209_async = ["dep:tmc2209-async", "uart_configurable_driver"]
uart_configurable_driver = ["dep:embedded-io-async"]
stallguard = []
uart_soft_half_duplex = [] # Subtle peripheral issues
uart_driver_shared_bus = [] # Subtle differences in board design

# For when your power supply is shit
brownout-protection = []

[dependencies]
# Debug deps
defmt = "1.1.0"

# Runtime deps
cortex-m = "0.7"
embassy-executor = { version = "0.10.0", features = ["defmt", "platform-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }

# Raspberry Silicon-specific deps
embassy-rp = { version = "0.10.0", optional = true, features = ["defmt", "rt", "time-driver", "critical-section-impl"] }
pio-proc = { version = "0.3.0", optional = true }
pio = { version = "0.3.0", optional = true }
fixed = { version = "1", optional = true }

# TMC2209 driver-specific deps
tmc2209-async = { git = "https://github.com/thinkier/tmc2209-rs", optional = true }

# State management deps
sequencer = { path = "../sequencer" }

# RPC deps
embassy-usb = { version = "0.6.0", optional = true, features = ["defmt"] }
embedded-io-async = { version = "0.7", optional = true, features = ["defmt"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6", features = ["defmt"] }
circ_buffer = { version = "0.1.9", optional = true }

# Memory management deps
static_cell = "2"
critical-section = { version = "1", optional = true }
portable-atomic = { version = "1.10" }
heapless = "0.9.1"
